Broken. Reorganized locations. Fleshed out SwingComponentWrapper.java and the container.
Fingers crossed Git will preserve the history...

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 
   <properties>
     <playn.version>1.7.2</playn.version>
+      <tripleplay.version>1.7.2</tripleplay.version>
   </properties>
 
   <profiles>
