--- a/core/pom.xml
+++ b/core/pom.xml
@@ -25,6 +25,11 @@
             <artifactId>tripleplay</artifactId>
             <version>${tripleplay.version}</version>
         </dependency>
+      <dependency>
+          <groupId>commons-lang</groupId>
+          <artifactId>commons-lang</artifactId>
+          <version>2.6</version>
+      </dependency>
   </dependencies>
 
   <build>
