--- a/core/pom.xml
+++ b/core/pom.xml
@@ -24,12 +24,9 @@
             <groupId>com.threerings</groupId>
             <artifactId>tripleplay</artifactId>
             <version>${tripleplay.version}</version>
+            <classifier>sources</classifier>
         </dependency>
-      <dependency>
-          <groupId>commons-lang</groupId>
-          <artifactId>commons-lang</artifactId>
-          <version>2.6</version>
-      </dependency>
+
   </dependencies>
 
   <build>
