--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>com.googlecode.playn</groupId>
     <artifactId>playn-project</artifactId>
-    <version>1.7.2</version>
+    <version>1.8-SNAPSHOT</version>
   </parent>
 
   <groupId>coza.mambo.migraine</groupId>
@@ -14,8 +14,8 @@
   <name>Migraine Metaproject</name>
 
   <properties>
-    <playn.version>1.7.2</playn.version>
-      <tripleplay.version>1.7.2</tripleplay.version>
+    <playn.version>1.8-SNAPSHOT</playn.version>
+      <tripleplay.version>1.8-SNAPSHOT</tripleplay.version>
   </properties>
 
   <profiles>
