--- a/pom.xml
+++ b/pom.xml
@@ -24,26 +24,11 @@
       <activation><activeByDefault>true</activeByDefault></activation>
       <modules><module>java</module></modules>
     </profile>
-    <profile>
-      <id>android</id>
-      <modules><module>android</module></modules>
-    </profile>
-    <profile>
-      <id>ios</id>
-      <modules><module>ios</module></modules>
-    </profile>
-    <profile>
-      <id>html</id>
-      <modules><module>html</module></modules>
-    </profile>
-    <profile>
-      <id>flash</id>
-      <modules><module>flash</module></modules>
-    </profile>
   </profiles>
+  
   <modules>
     <module>assets</module>
     <module>core</module>
-    <module>html</module>
+    <module>java</module>
   </modules>
 </project>
